<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/settings"
            app:showAsAction="never"/>
</menu>