<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:padding="@dimen/spacing_xlarge">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_zipcode"/>

        <EditText
                android:id="@+id/cityCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_zipcode"
                android:inputType="number"/>

    </LinearLayout>

</FrameLayout>