...
                android:layout_width="64dp"
                android:layout_height="64dp"
                tools:ignore="ContentDescription"
                tools:src="@mipmap/ic_launcher"/>

        <TextView
                android:id="@+id/weatherDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xlarge"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:text="Few clouds"/>

...
